--- a/configure.in
+++ b/configure.in
@@ -128,6 +128,11 @@ ROBOT_PATH_LIB([pocolibs], PORTLIB_LDFLAGS, [portLib], [osInit],
 	[AC_MSG_ERROR([please use --with-pocolibs option.])],
 	[$opt_pocolibs_eprefix/lib:$opt_pocolibs/lib:/usr/local/lib:/usr/lib])
 
+POCOLIBS_INCLUDE_PATH=$pocolibs_INCLUDE_PATH
+AC_SUBST(POCOLIBS_INCLUDE_PATH)
+POCOLIBS_LIB_PATH=$pocolibs_LIB_PATH
+AC_SUBST(POCOLIBS_LIB_PATH)
+
 ROBOT_LIB_TCL
 
 
@@ -142,6 +147,8 @@ AC_OUTPUT(
 	src/Makefile
 	include/Makefile
 	canvas/Makefile
+        canvas/autoconf/configure.begin.in
+        canvas/autoconf/configure.end.in
 	tclserv/server/Makefile
 	tclserv/client/Makefile
 	doc/user_guide/Makefile
