--- a/configure.in
+++ b/configure.in
@@ -8,6 +8,11 @@ AC_REVISION($LAAS$)
 AC_INIT(src/genom.c)
 AC_CONFIG_HEADER(genom-config.h)
 
+PACKAGE=genom
+VERSION=1.5
+AC_SUBST(PACKAGE)
+AC_SUBST(VERSION)
+
 AC_CANONICAL_HOST
 
 AC_ARG_WITH(libsonly,
@@ -120,18 +125,22 @@ AC_ARG_WITH(pocolibs-exec-prefix,
                [pocolibs libraries are installed in DIR (exec-prefix)]),
            [opt_pocolibs_eprefix=$withval],[opt_pocolibs_eprefix=$exec_prefix])
 
-ROBOT_PATH_INC([pocolibs], PORTLIB_CFLAGS, [portLib.h],
-	[AC_MSG_ERROR([please use --with-pocolibs option.])],
-	[$opt_pocolibs/include:/usr/local/include:/usr/include])
+dnl ROBOT_PATH_INC([pocolibs], PORTLIB_CFLAGS, [portLib.h],
+dnl	[AC_MSG_ERROR([please use --with-pocolibs option.])],
+dnl	[$opt_pocolibs/include:/usr/local/include:/usr/include])
 
-ROBOT_PATH_LIB([pocolibs], PORTLIB_LDFLAGS, [portLib], [osInit],
-	[AC_MSG_ERROR([please use --with-pocolibs option.])],
-	[$opt_pocolibs_eprefix/lib:$opt_pocolibs/lib:/usr/local/lib:/usr/lib])
+dnl ROBOT_PATH_LIB([pocolibs], PORTLIB_LDFLAGS, [portLib], [osInit],
+dnl	[AC_MSG_ERROR([please use --with-pocolibs option.])],
+dnl	[$opt_pocolibs_eprefix/lib:$opt_pocolibs/lib:/usr/local/lib:/usr/lib])
 
-POCOLIBS_INCLUDE_PATH=$pocolibs_INCLUDE_PATH
-AC_SUBST(POCOLIBS_INCLUDE_PATH)
-POCOLIBS_LIB_PATH=$pocolibs_LIB_PATH
-AC_SUBST(POCOLIBS_LIB_PATH)
+dnl POCOLIBS_INCLUDE_PATH=$pocolibs_INCLUDE_PATH
+dnl AC_SUBST(POCOLIBS_INCLUDE_PATH)
+dnl POCOLIBS_LIB_PATH=$pocolibs_LIB_PATH
+dnl AC_SUBST(POCOLIBS_LIB_PATH)
+
+PKG_CHECK_MODULES(PORTLIB, pocolibs >= 2.0)
+AC_SUBST(PORTLIB_CFLAGS)
+AC_SUBST(PORTLIB_LIBS)
 
 ROBOT_LIB_TCL
 
@@ -143,6 +152,7 @@ CFLAGS="${C_DEBUG_FLAGS} ${C_WARNING_FLAGS} ${CFLAGS}"
 AC_OUTPUT(
 	config.mk
 	Makefile
+	genom.pc
 	lib/Makefile
 	src/Makefile
 	include/Makefile
