--- a/tclserv/server/Makefile.in
+++ b/tclserv/server/Makefile.in
@@ -48,7 +48,7 @@ CPPFLAGS+=	-I$(top_builddir) -I$(top_srcdir)/include -I$(srcdir) -I.
 CPPFLAGS+=	$(PORTLIB_CFLAGS)
 CPPFLAGS+=	-D$(ENDIANNESS)
 
-LDFLAGS+=	$(PORTLIB_LDFLAGS)
+LDFLAGS+=	$(PORTLIB_LIBS)
 LDFLAGS+=	-lposterLib -lerrorLib -lcomLib -lportLib $(OS_LIBS)
 
 
