--- a/configure.in
+++ b/configure.in
@@ -9,9 +9,16 @@ AC_INIT(src/genom.c)
 AC_CONFIG_HEADER(genom-config.h)
 
 PACKAGE=genom
-VERSION=1.1B
+GENOM_MAJOR=1
+GENOM_MINOR=1
+GENOM_REV=B
+GENOM_VERSION=${GENOM_MAJOR}.${GENOM_MINOR}${GENOM_REV}
+
 AC_SUBST(PACKAGE)
-AC_SUBST(VERSION)
+AC_SUBST(GENOM_MAJOR)
+AC_SUBST(GENOM_MINOR)
+AC_SUBST(GENOM_REV)
+AC_SUBST(GENOM_VERSION)
 
 AC_CANONICAL_HOST
 
