--- a/genom.pc.in
+++ b/genom.pc.in
@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: genom
 Description: generator of modules
-Version: @VERSION@
+Version: @GENOM_MAJOR@.@GENOM_MINOR@
 Requires: pocolibs
 Libs: -L${libdir} -lgenom @LIBS@
 Cflags: -I${includedir}
