--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -34,6 +34,8 @@ top_builddir=.
 top_srcdir=	@top_srcdir@
 srcdir=		@srcdir@
 
+INSTALL=	@INSTALL@
+
 include $(top_builddir)/config.mk
 
 SUBDIRS= $(serverdir) $(codelsdir)
@@ -44,7 +46,7 @@ config_files = \
 
 # Generic targets
 .PHONY: all install depend
-all install depend: $(config_files)
+all install depend:: $(config_files)
 	$(MAKE) $@-$(OSAPI)
 
 .PHONY: clean
@@ -82,6 +84,10 @@ regen: standalone-regen
 	    ./config.status --recheck; \
 	fi
 	@./config.status
+
+# --- pkgconfig ---------------------------------------------------------
+install:: $module$.pc
+	$(INSTALL) $module$.pc $(libdir)/pkgconfig
 
 # --- autoconf/autoheader -----------------------------------------------
 
