--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -28,9 +28,9 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-top_srcdir=	 @top_srcdir@
-srcdir=	 	   @srcdir@
-top_builddir= @top_builddir@
+top_srcdir=	@top_srcdir@
+srcdir=	 	@srcdir@
+top_builddir=	@top_builddir@
 
 prefix=		@prefix@
 exec_prefix=	@exec_prefix@
@@ -39,13 +39,14 @@ libdir=		@libdir@
 includedir=	@includedir@
 datadir=	@datadir@
 
-INSTALL=  @INSTALL@
+INSTALL= 	@INSTALL@
 VPATH=		$(srcdir)
 
 include $(top_builddir)/config.mk
 
 CPPFLAGS+=	-I$(top_builddir) -I$(top_srcdir)/include -I$(srcdir) -I.
 CPPFLAGS+=	$(PORTLIB_CFLAGS)
+CPPFLAGS+=	-DGENOM_VERSION=\"$(GENOM_MAJOR).$(GENOM_MINOR)$(GENOM_REV)\"
 
 LDFLAGS+=	@LEXLIB@
 
