Use GENOM_MAJOR.GENOM_MINOR in module.pc since the genom revision should not break compatibility (and the genom.pc file drops the revision too)
Define the three preprocessor symbols in genom-config.h.in instead of using
-D in the src/Makefile.in.

--- a/canvas/module.pc.in
+++ b/canvas/module.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: $module$
 Description: $module$ Genom module
 Version: @PACKAGE_VERSION@
-Requires: genom >= $genomVersion$
+Requires: genom >= $genomMajor$.$genomMinor$
 Libs: -L${libdir} -l$module$Client
 Cflags: -I${includedir}
