--- a/configure.in
+++ b/configure.in
@@ -20,6 +20,10 @@ AC_SUBST(GENOM_MINOR)
 AC_SUBST(GENOM_REV)
 AC_SUBST(GENOM_VERSION)
 
+AC_DEFINE_UNQUOTED(GENOM_VERSION, "$GENOM_VERSION", [The complete version of GenoM])
+AC_DEFINE_UNQUOTED(GENOM_MAJOR, "$GENOM_MAJOR", [The major revision of GenoM])
+AC_DEFINE_UNQUOTED(GENOM_MINOR, "$GENOM_MINOR", [The minor revision of GenoM])
+
 AC_CANONICAL_HOST
 
 AC_ARG_WITH(libsonly,
