Create destination directory if missing.

--- a/doc/user_guide/Makefile.in
+++ b/doc/user_guide/Makefile.in
@@ -75,6 +75,7 @@ fig-links:
 
 ifneq (:,$(LATEX))
 install: all
+	$(MKINSTALLDIRS) $(datadir)
 	$(INSTALL_DATA) $(genom_doc) $(datadir)/$(genom_doc)
 else
 install:
