* Make -Ppackage use pkg-config. There is no more -Ppackage=path. Everything is       pkg-config based (for the best)     * make genom generate the associated <package>_CFLAGS, <package>_LIBS and       PKG_CHECK_MODULES lines in configure.in and config.mk.in     * Put callCpp and get_pkgconfig_cflags in a separate file so we don't have to rebuild       everything everytime we change something here

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -84,7 +84,8 @@ SRCS = \
 	userExecCodelsGen.c	\
 	userCntrlCodelsGen.c	\
 	userStartGen.c		\
-	configureGen.c	
+	configureGen.c		\
+	extern_processes.c
 
 OBJS = $(SRCS:.c=.lo)
 
