--- a/canvas/module.pc.in
+++ b/canvas/module.pc.in
@@ -1,11 +1,11 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@
+includedir=@includedir@/$module$
 
 Name: $module$
 Description: $module$ Genom module
 Version: @PACKAGE_VERSION@
-Requires: genom >= $genomMajor$.$genomMinor$
+Requires: genom >= $genomMajor$.$genomMinor$ $require$
 Libs: -L${libdir} -l$module$Client
 Cflags: -I${includedir}
