Added genom-clean. It removes everything that is not needed for regeneration.  After calling genom-clean, you can regenerate the module by doing
    make -f autoconf/genom.mk regen

--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -46,7 +46,9 @@ include $(top_builddir)/config.mk
 # -----------------------------------------------------------------------
 
 flist=\
-	killmodule
+	killmodule \
+	genom-clean
+	
 
 # -----------------------------------------------------------------------
 
