* make sure that the default target in codels/Makefile is the one defined       in codels.mk

--- a/canvas/codels/Makefile.in
+++ b/canvas/codels/Makefile.in
@@ -41,6 +41,10 @@ INSTALL=  	@INSTALL@
 VPATH=	  	$(srcdir)
 
 include $(top_builddir)/config.mk
+
+# Ensure that the default target is the one defined in codels.mk
+all: codels-mk-all
+
 # --- source files ------------------------------------------------------
 
 codels_src = \
