--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -38,7 +38,7 @@ INSTALL=	@INSTALL@
 
 include $(top_builddir)/config.mk
 
-SUBDIRS= $(serverdir) $(codelsdir)
+SUBDIRS= $(serverdir) @EXTRA_SUBDIRS@ $(codelsdir)
 
 config_files = \
 	Makefile \
@@ -86,9 +86,11 @@ regen: standalone-regen
 	@./config.status
 
 # --- pkgconfig ---------------------------------------------------------
-install:: $module$.pc
+ALL_PKGCONFIG:=$module$.pc $(addsuffix .pc,@EXTRA_PKGCONFIG@)
+install:: $(ALL_PKGCONFIG)
 	$(MKINSTALLDIRS) $(libdir)/pkgconfig
-	$(INSTALL) $module$.pc $(libdir)/pkgconfig
+	$(INSTALL) $(ALL_PKGCONFIG) $(libdir)/pkgconfig
+	
 
 # --- autoconf/autoheader -----------------------------------------------
 
