* basic C++ support. If USE_CXX is set to 1 in configure.ac.user, the       configure script will check for a C++ compiler and LTCXX will be defined
      You can then have C++ files in the codels directory if the file is a .cpp
      (not tested). C++ in codel files is not supported though

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -46,15 +46,22 @@ datadir=	@datadir@/modules
 
 # --- Programs ----------------------------------------------------------
 
+USE_CXX=	@USE_CXX@
+
 CPP=		@CPP@
 PURIFY=		
-CC=		@CC@
 SED=		sed
 MKDEP=		@MKDEP@
 MKINSTALLDIRS=  $(top_srcdir)/autoconf/mkinstalldirs
 
 LIBTOOL=        @LIBTOOL@ 
+CC=		@CC@
 LTCC=           $(LIBTOOL) --mode=compile $(CC)
+ifeq ($(USE_CXX),1)
+CXX=		@CXX@
+LTCXX=		$(LIBTOOL) --mode=compile $(CXX)
+endif
+
 LTLD=           $(LIBTOOL) --mode=link $(PURIFY) $(CC)
 LTRM=           $(LIBTOOL) --mode=clean rm -f
 LTINSTALL=	$(LIBTOOL) --mode=install $(INSTALL)
