--- a/canvas/autoconf/configure.ac.begin.in
+++ b/canvas/autoconf/configure.ac.begin.in
@@ -12,12 +12,21 @@ AC_CANONICAL_HOST
 
 dnl --- checks for programs ---------------------------------------------
 dnl
+USE_CXX=$use_cxx$
+AC_SUBST(USE_CXX)
+
+AC_PROG_CC
+if test "x$USE_CXX" = "x1"; then
+    AC_PROG_CXX
+fi
+
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
 ROBOT_CFLAGS
 CFLAGS="${C_DEBUG_FLAGS} ${C_WARNING_FLAGS}"
+
 ROBOT_PROG_MKDEP
 
 dnl Checks for headers --------------------------------------------------
