--- a/canvas/server/Makefile.in
+++ b/canvas/server/Makefile.in
@@ -2,7 +2,7 @@
 
 $commentbegin$
 #
-# Copyright (C) 1993-2003 LAAS/CNRS
+# Copyright (C) 1993-2005 LAAS/CNRS
 # All rights reserved.
 #
 # Redistribution  and  use in source   and binary forms,  with or without
@@ -138,11 +138,11 @@ $genOpenprs$	openprs/$module$EncodeOpenprs.c \
 $genOpenprs$	openprs/$module$RequestsOpenprs.c
 $genOpenprs$openprsclient_obj=$(openprsclient_src:%.c=$(OBJDIR)/%.lo)
 $genOpenprs$oprsclient_headers = \
-$genOpenprs$	openprs/genPosDecodeOpenprs.h \
-$genOpenprs$	openprs/genPosDecodeOpenprsProto.h \
-$genOpenprs$	openprs/genPosEncodeOpenprs.h \
-$genOpenprs$	openprs/genPosEncodeOpenprsProto.h \
-$genOpenprs$	openprs/genPosRequestsOpenprsProto.h
+$genOpenprs$	openprs/$module$DecodeOpenprs.h \
+$genOpenprs$	openprs/$module$DecodeOpenprsProto.h \
+$genOpenprs$	openprs/$module$EncodeOpenprs.h \
+$genOpenprs$	openprs/$module$EncodeOpenprsProto.h \
+$genOpenprs$	openprs/$module$RequestsOpenprsProto.h
 $genOpenprs$oprsclient_data = \
 $genOpenprs$	openprs/$module$Openprs.inc openprs/$module$Openprs.opf openprs/$module$Openprs.sym
 
