--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -47,7 +47,8 @@ include $(top_builddir)/config.mk
 
 flist=\
 	killmodule \
-	genom-clean
+	genom-clean \
+	killmymodules
 	
 
 # -----------------------------------------------------------------------
